test/deca/context/invalid/1_1_main_avan_class.deca
// Description:
//    main defini avant les classes
//
// Resultats:
//    Ligne 11: void type invalide

{
 A aa;
}
class A {
  int a;
}
